<resources>
    <string name="app_name">Food Order</string>
    <string name="enjoy_restaurant_quality_meals_nat_home">Enjoy Restaurant Quality Meals\nat Home</string>
    <string name="sign_up">Sign Up</string>
    <string name="deliver_favorite_food">Deliver Favorite Food</string>
    <string name="waves_of_food">Waves Of Food</string>
    <string name="don_t_have_account">Don’t Have Account?</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="location_description">To provide you with the best dining experience, we need your permission to access your device\'s location. By enabling location services, we can offer personalized restaurant recommendations, accurate delivery estimates, and ensure a seamless food delivery experience.</string>
    <string name="do_you_want_to_continue_with_this_selected_country">Do you want to continue with this selected country?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore_your_favorite_food">Explore Your Favorite Food</string>
    <string name="popular">Popular</string>
    <string name="short_description">Short description</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim a</string>
    <string name="ingredients">Ingredients</string>
    <string name="deliever_favorite_food">Deliever Favorite Food</string>
    <string name="spacy_fresh_crab">Spacy Fresh Crab</string>
    <string name="what_do_you_want_to_order">What do you want to order?</string>
    <string name="proceed">Proceed</string>
</resources>